{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 184,
  "lineage": "df481a93-241f-0df9-1532-bf8c2311c944",
  "resources": [
    {
      "module": "module.rsi-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:891377256846:security-group/sg-0fd4a4a6ed9802315",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd4a4a6ed9802315",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8085
              }
            ],
            "name": "RSI-SG",
            "name_prefix": "",
            "owner_id": "891377256846",
            "revoke_rules_on_delete": false,
            "tags": {
              "Created-by": "jmarvinr",
              "Environment": "staging",
              "Name": "RSI-SG",
              "Release": "latest"
            },
            "tags_all": {
              "Created-by": "jmarvinr",
              "Environment": "staging",
              "Name": "RSI-SG",
              "Release": "latest"
            },
            "timeouts": null,
            "vpc_id": "vpc-06df8de0fe3cdebaa"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.rsi-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2901853439",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fd4a4a6ed9802315",
            "security_group_rule_id": "sgr-03470512d5dca233e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rsi-sg.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.rsi-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-2679423480",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd4a4a6ed9802315",
            "security_group_rule_id": "sgr-0ec6b10ae82311c61",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8085,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rsi-sg.aws_security_group.ec2_sg"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-4174653142",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fd4a4a6ed9802315",
            "security_group_rule_id": "sgr-0e3c5b0667b3dd2a3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rsi-sg.aws_security_group.ec2_sg"
          ]
        }
      ]
    }
  ]
}